--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8882
-management.endpoints.web.exposure.include=*
+#management.endpoints.web.exposure.include=*
 #spring.h2.console.enabled=true
 #spring.h2.console.path=h2
 
@@ -21,7 +21,7 @@ DB_CLOSE_ON_EXIT=FALSE
 ###
 #   Hibernate Settings
 ###
-spring.jpa.hibernate.ddl-auto = update
-spring.jpa.properties.hibernate.show_sql=false
-spring.jpa.properties.hibernate.use_sql_comments=false
-spring.jpa.properties.hibernate.format_sql=false
+#spring.jpa.hibernate.ddl-auto = update
+#spring.jpa.properties.hibernate.show_sql=false
+#spring.jpa.properties.hibernate.use_sql_comments=false
+#spring.jpa.properties.hibernate.format_sql=false
